[Survey Stabilisation] Migrating to Row-Hash Idempotency, Normalization & Soft Versioning for Survey Hub